# KMeansClustering

./: .gitignore  README.md
generate_datasets/: main.py
k_means_clustering/: CMakeLists.txt  Cluster.cpp  Cluster.h  Clusters.h  Point.cpp  Point.h  Points.h  kMeansClustering.cpp  kMeansClustering.h  main.cpp  main_soa.cpp  utils.cpp  utils.h
paper/: KMeansClustering.tex
presentation/: KMeansClustering.pptx
